# coupe18

./: .gitignore  .gitmodules  README.md  conf_jsdoc.json  config.js  index.html  package.json
ROS/: README.md  (+1 more)
ax12/prgm_ax12/: CMakeLists.txt
ax12/prgm_ax12/src/: ax.cpp  ax.h  axParser.cpp  axParser.h  define.h  main.cpp
ax12/prgm_test/: CMakeLists.txt  input.txt
ax12/prgm_test/src/: Test.cpp
hokuyo/: CMakeLists.txt  main.js  main.sh  main.simu.js  make.sh  orders.json  urg_INSTALLATION
hokuyo/src/: communication.c  communication.h  compat.c  compat.h  fast_math.c  fast_math.h  global.h  gui.c  gui.h  hokuyo_config.c  hokuyo_config.h  main.c  utils.c  utils.h
pathfinding/: .gitignore  CMakeLists.txt  make.sh
pathfinding-new/utcoupe_tests/: CMakeLists.txt  package.xml
pathfinding-new/utcoupe_tests/include/pathfinding/: map.hpp
pathfinding-new/utcoupe_tests/libs/tclap-1.2.1/: Makefile
pathfinding-new/utcoupe_tests/src/: pathfinding.cpp
pathfinding-new/utcoupe_tests/src/pathfinding/: map.cpp
pathfinding/img/: table_2017_nb.xcf
pathfinding/src/: main.cpp
pathfinding/src/lib/: map.cpp  map.hpp
pathfinding/src/test/: map_test.cpp
ros_ws/src/actuators/: CMakeLists.txt  package.xml
ros_ws/src/actuators/definitions/: actuators.xml
ros_ws/src/ai_game_status/: CMakeLists.txt  package.xml
ros_ws/src/ai_game_status/import/: status_services.py
ros_ws/src/ai_game_status/init_service/: __init__.py
ros_ws/src/ai_game_status/msg/: GameEnd.msg  GameStatus.msg  GameTime.msg
ros_ws/src/ai_game_status/src/: game_status_node.py  init_service.cpp  timer.py  timer_node.py
ros_ws/src/ai_game_status/srv/: ArmRequest.srv  SetStatus.srv  SetTimer.srv
ros_ws/src/ai_scheduler/: CMakeLists.txt  package.xml
ros_ws/src/ai_scheduler/def/: 1_strategies.xml  2_actions.xml  3_orders.xml  strategies_simple.xml
ros_ws/src/ai_scheduler/launch/: main.launch
ros_ws/src/ai_scheduler/src/: ai_game_status_services.py  scheduler_communication.py  scheduler_node.py  scheduler_services.py  test.py
ros_ws/src/ai_scheduler/srv/: AICommand.srv
ros_ws/src/ai_timer/: CMakeLists.txt  README.md  package.xml
ros_ws/src/ai_timer/msg/: ai_timer.msg
ros_ws/src/ai_timer/src/: ai_timer_node.py  timer_node.py
ros_ws/src/drivers_ard_asserv/: CMakeLists.txt  package.xml
ros_ws/src/drivers_ard_asserv/action/: DoGoto.action
ros_ws/src/drivers_ard_asserv/src/: ard_asserv_node.py  check_arduino.py  marker_server_node.py
ros_ws/src/drivers_ard_asserv/srv/: Speed.srv
ros_ws/src/drivers_ard_others/: CMakeLists.txt  README.md  package.xml
ros_ws/src/drivers_ard_others/msg/: BeltRange.msg  BeltRangeList.msg  Color.msg  Move.msg  Range.msg
ros_ws/src/drivers_ard_others/src/: CMakeLists.txt  ard_others_node.cpp  ard_others_teraranger.py
ros_ws/src/drivers_ax12/: CMakeLists.txt  README.md  package.xml
ros_ws/src/drivers_ax12/action/: AngleCommand.action
ros_ws/src/drivers_ax12/include/: ax12_driver.h  ax12_server.h  ax12_table.h
ros_ws/src/drivers_ax12/launch/: ax12.launch  ttest.launch
ros_ws/src/drivers_ax12/lib/: CMakeLists.txt
ros_ws/src/drivers_ax12/src/: angle_controller.py  ax12_driver.cpp  ax12_node.cpp  ax12_node.py  ax12_server.cpp
ros_ws/src/drivers_teraranger/: CMakeLists.txt  package.xml
ros_ws/src/drivers_teraranger/src/: teraranger_node.py
ros_ws/src/memory_definitions/: CMakeLists.txt  package.xml
ros_ws/src/memory_definitions/def/: game.json
ros_ws/src/memory_definitions/launch/: debug_station.launch  general.launch  test_asserv.launch  test_collision.launch
ros_ws/src/memory_definitions/src/: definitions_node.py
ros_ws/src/memory_map/: CMakeLists.txt
ros_ws/src/memory_map/def/: 4_Entities.yml  arena_2018_beta.stl  config.rviz
ros_ws/src/memory_map/msg/: Waypoint.msg
ros_ws/src/memory_map/src/: map_communication.py  map_node.py
ros_ws/src/memory_map/src_old/: map_node.py
ros_ws/src/memory_map/srv/: FillWaypoint.srv  MapGetOccupancy.srv  MapSet.srv
ros_ws/src/movement_actuators/: CMakeLists.txt  package.xml
ros_ws/src/movement_actuators/action/: Arm.action  Barrel.action  arduino.action  arm.action  dispatch.action
ros_ws/src/movement_actuators/def/: actuators.xml
ros_ws/src/movement_actuators/src/: actuators_node.py  actuators_node_old.py  actuators_properties.py
ros_ws/src/movement_navigation_navigator/: CMakeLists.txt  package.xml
ros_ws/src/movement_navigation_navigator/src/: navigator_node.py
ros_ws/src/navigation_collisions/: CMakeLists.txt  config.rviz  frames.gv  ideas.todo  package.xml
ros_ws/src/navigation_collisions/include/: collisions_subscriptions.h  obstacles_stack.h
ros_ws/src/navigation_collisions/msg/: PredictedCollision.msg
ros_ws/src/navigation_collisions/src/: collisions_node.cpp  collisions_node.py  collisions_robot.py  collisions_subscriptions.cpp  collisions_subscriptions.py  engine.py  engine_check_zone.py  engine_constants.py  engine_shapes.py  engine_shapes_attrib.py  obstacles_stack.py  status_services.py
ros_ws/src/navigation_collisions/src_old/: collisions_node.py
ros_ws/src/navigation_collisions/srv/: ActivateCollisions.srv
ros_ws/src/navigation_coppisions/: CMakeLists.txt  package.xml
ros_ws/src/navigation_coppisions/include/: collisions_node.h  collisions_robot.h  obstacles_stack.h
ros_ws/src/navigation_coppisions/msg/: PredictedCollision.msg
ros_ws/src/navigation_coppisions/src/: collisions_node.cpp  collisions_robot.cpp  obstacles_stack.cpp
ros_ws/src/navigation_navigator/: CMakeLists.txt  package.xml
ros_ws/src/navigation_navigator/action/: DoGoto.action  DoGotoWaypoint.action
ros_ws/src/navigation_navigator/src/: navigator_node.py  planning.py
ros_ws/src/navigation_navigator/srv/: Goto.srv
ros_ws/src/navigation_pathfinder/: CMakeLists.txt  package.xml
ros_ws/src/navigation_pathfinder/def/: PathfinderNode.cfg
ros_ws/src/navigation_pathfinder/src/: pathfinder.cpp  pathfinder_node.cpp
ros_ws/src/processing_belt_interpreter/: CMakeLists.txt  package.xml
ros_ws/src/processing_belt_interpreter/msg/: BeltFiltered.msg  RangeList.msg  RectangleStamped.msg
(+678 files in other folders)
