<?xml version="1.0"?>
<package format="2">
    <name>actuators</name>
    <version>0.0.1</version>
    <description>The actuators package</description>
    <license>GPLv3</license>
    <author>P. Potiron</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>actionlib_msgs</depend>
</package>