<?xml version="1.0"?>
<package format="2">
    <name>ai_timer</name>
    <version>0.0.0</version>
    <description>The ai_timer package</description>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <license>GPLv3</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>ai_scheduler</build_depend>
    <build_depend>message_generation</build_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <exec_depend>message_runtime</exec_depend>
</package>