<?xml version="1.0"?>
<package>
    <name>ard_asserv</name>
    <version>0.0.1</version>
    <description>
        The package that manages a serial communication between the arduino in charge of the asserv and the ros system. It provides services that redirects commands to the arduino, and topics that convey information from it.
    </description>
    <maintainer>utcoupe</maintainer>
    <author email="tomesman@gmail.com">Thomas Fuhrmann</author>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

    <export>
    </export>
</package>
