<?xml version="1.0"?>
<package format="2">
    <name>drivers_ard_asserv</name>
    <version>0.0.1</version>
    <description>
        The package that manages a serial communication between the arduino in charge of the asserv and the ros system. It provides services that redirects commands to the arduino, and topics that convey information from it.
    </description>
    <maintainer email="utcoupe@assos.utc.fr">utcoupe</maintainer>
    <author email="tomesman@gmail.com">Thomas Fuhrmann</author>
    <license>GPLv3</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <export>
    </export>
</package>
