<?xml version="1.0"?>
<package format="2">
  <name>drivers_ax12</name>
  <version>0.0.0</version>
  <description>The drivers_ax12 package</description>
  <author email="utcoupe@assos.utc.fr">milesial</author>
  <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamixel_workbench_controllers</exec_depend>

  <export>
  </export>
</package>
