<?xml version="1.0"?>
<package>
    <name>memory_definitions</name>
    <version>0.0.0</version>
    <description>
        Package with all the definition files the others packages need.
        A service returns a full absolute path to the requested file.
        The service can dynamically adapt the path based on ROS params. 
            E.g. The name of the robot, which will lead to different description files.
    </description>

    <maintainer email="utcoupe@assos.utc.fr">utcoupe</maintainer>
    <author email="utcoupe@assos.utc.fr">milesial</author>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>rospy</buildtool_depend>
    <buildtool_depend>message_generation</buildtool_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>rospy</run_depend>

    <export></export>
</package>
