<?xml version="1.0"?>
<package format="2">
    <name>movement_actuators</name>
    <version>0.0.1</version>
    <description>The actuators package</description>
    <author>P. Potiron</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <license>GPLv3</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>actionlib_msgs</depend>
</package>