<?xml version="1.0"?>
<package format="2">
    <name>movement_navigation_navigator</name>
    <version>0.0.2</version>
    <description>The movement/navigation/navigator package for coupe18</description>

    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>

    <license>TODO</license>


    <author email="mindstan@hotmail.fr">Gaëtan Blond</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>pathfinding</build_depend>
    <build_depend>asserv</build_depend>

    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>actionlib</build_export_depend>
    <build_export_depend>actionlib_msgs</build_export_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>pathfinding</exec_depend>
    <exec_depend>asserv</exec_depend>


    <export>
    </export>
</package>
