<?xml version="1.0"?>
<package format="2">
    <name>navigation_coppisions</name>
    <version>0.0.1</version>
    <description>The navigation_coppisions package</description>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe Association</maintainer>
    <license>GPLv3</license>
    <author email="pielaclau@gmail.com">MadeInPierre</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>

    <depend>std_msgs</depend>
    <depend>message_generation</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>ai_game_status</depend>
    <depend>memory_map</depend>
    <depend>recognition_objects_classifier</depend>
    <exec_depend>message_runtime</exec_depend>
    <export></export>
</package>
