<?xml version="1.0"?>
<package format="2">
    <name>navigation_pathfinder</name>
    <version>0.0.0</version>
    <description>The pathfinding package</description>
    <author email="mindstan@hotmail.fr">Mindstan</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <license>GPLv3</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <export>
    </export>
</package>
