<?xml version="1.0"?>
<package format="2">
    <name>navigation_pathfinder</name>
    <version>0.0.0</version>
    <description>The pathfinding package</description>
    <license>GPLv3</license>
    <author email="mindstan@hotmail.fr">Mindstan</author>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <exec_depend>message_runtime</exec_depend>
    <export>
    </export>
</package>
