<?xml version="1.0"?>
<package format="2">
    <name>navigation_pathfinder</name>
    <version>0.0.1</version>
    <description>The navigation_pathfinder package</description>
    <maintainer email="utcoupe@assos.utc.fr">UTCoupe Association</maintainer>
    <license>GPLv3</license>
    <author email="mindstan@hotmail.fr">Mindstan</author>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>message_generation</depend>
    <depend>geometry_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>processing_belt_interpreter</depend>
    <depend>processing_lidar_objects</depend>
    <exec_depend>message_runtime</exec_depend>
    <export>
    </export>
</package>
