<?xml version="1.0"?>
<package>
    <name>processing_belt_interpreter</name>
    <version>0.0.1</version>
    <description>
        Takes a list of ranges from the distance sensors surrounding the robot and filters out the points
        pointing to an existing object in the map. The others may correspond to unknwown objects (enemies
        for instance).
        Publishes two lists in a topic corresponding with the categorized ranges.
    </description>

    <maintainer email="utcoupe@assos.utc.fr">utcoupe</maintainer>
    <author email="utcoupe@assos.utc.fr">milesial</author>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>recognition_localizer</run_depend>
    <run_depend>memory_map</run_depend>
    <!-- todo: add package that published sensors -->
    <export></export>
</package>
